# davo-tools

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  backlog.txt  pyproject.toml  setup.cfg  setup.py
davo/: __init__.py  cli.py  constants.py  errors.py  settings.py  version.py
davo/common/: __init__.py  cli.py  errors.py  helpers.py  settings.py
davo/common/utils/: __init__.py  cli.py  conf.py
davo/git_tools/: cli.py
davo/photo/: cli.py  errors.py  helpers.py  replace_classes.py  settings.py  utils.py
davo/services/: __init__.py  common.py  git_tools.py
davo/services/photo/: __init__.py  cli.py  clients.py  const.py  helpers.py  pdf.py  recover.py  replace_classes.py  utils.py
davo/services/photo/cv3/: __init__.py  common.py  dnn.py  downscale.py  pipelines.py  transform.py
davo/services/s3sync/: __init__.py  cache.py  cli.py  conf.py  const.py  handlers.py  tasks.py  utils.py  workers.py
davo/services/vpn/: __init__.py  cli.py  handlers.py  helpers.py  utils.py
davo/utils/: __init__.py  cli.py  concur.py  conf.py  format.py  path.py  prnt.py
davo/vpn/: cli.py  errors.py  handlers.py  utils.py
docs/: README.md  roadmap.md
docs/specs/: 20260512-bug-replace-upload-cache.md  20260513-bug-s3-file-path-remote-empty.md  README.md
tests/services/: test_media_helpers.py  test_pdf.py  test_s3sync.py
